<resources>
    <string name="navigation_guidance_day" translatable="false">mapbox://styles/mapbox/navigation-guidance-day-v4</string>
    <string name="access_token" translatable="false">sk.eyJ1Ijoia2lzaG9yMDA1NSIsImEiOiJjazg4aTM1ajUwOGZtM2htcW9heXBvMWRqIn0.JvSDI0bgdVhzU-UGgfibkw</string>
    <string name="user_location_permission_explanation" translatable="false">This app needs location permissions to show its functionality.</string>
    <string name="user_location_permission_not_granted" translatable="false">You didn\'t grant location permissions.</string>
    <string name="app_name">1TapHelp</string>
    <string name="phone_number">Phone Number</string>
    <string name="action_settings">Settings</string>
    <string name="text_hindi" translatable="false">हिंदी</string>
    <string name="text_english" translatable="false">English</string>
    <string name="login">Login</string>
    <string name="verification_code">Verification Code</string>
    <string name="submit">Submit</string>
    <string name="register">Register</string>
    <string name="reg_name">Name</string>
    <string name="title_volunteer_mode">Volunteer Mode</string>
    <string name="volunteer_mode_summary">When Volunteer Mode is on, you\'ll receive alerts if someone in your area needs help. When you help someone, you\'ll be rewarded with points.</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="title_emergency_contacts">Emergency Contacts</string>
    <string name="emergency_contacts_summary">Select 5 Emergency Contacts that will be automatically contacted in case of emergency.</string>
    <string name="user_image">User Image</string>
    <string name="text_signal_sent">Signal Sent</string>
    <string name="text_signal_accepted">Your signal was sent. We\'ll notify you when a DM Station accepts your signal.</string>
    <string name="text_HelpOnTheWay">Help on the way</string>
    <string name="text_acceptingStation">Your signal was accepted by</string>
    <string name="text_StationDistance">Approx. 1Kms away</string>
    <string name="text_call">Call</string>
    <string name="text_sendSignal">Send SOS Signal</string>
    <string name="text_captureImageHint">Capture Images manually \n ( If someone else needs help )</string>
    <string name="text_captureImage">Capture Image</string>
    <string name="text_ReceivingStations">Your signal was sent to the following DM Stations:</string>
</resources>
