<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:gravity="center"
              android:layout_width="match_parent"
              android:paddingHorizontal="25dp"
              android:layout_height="match_parent">

    <TextView
            android:text="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="32sp"
    />

    <TextView
            android:text="@string/register"
            android:layout_marginBottom="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="24sp"/>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reg_name"
    >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textField_name"
            android:layout_width="match_parent"
                android:layout_height="wrap_content"
        />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/title_volunteer_mode"
        android:id="@+id/register_volunteerToggle"/>
    <TextView
            android:text="@string/volunteer_mode_summary"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/hint_volunteerText"/>
    <Button
            android:layout_marginTop="20dp"
            android:id="@+id/signup_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            style="@style/Widget.MaterialComponents.Button"
    />

    <ProgressBar
            android:layout_marginTop="20dp"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register_progress"/>

</LinearLayout>