<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:paddingHorizontal="25dp"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="32sp"
        android:textColor="?android:attr/textColorPrimary"
        android:gravity="center_horizontal" />

    <TextView
        android:text="@string/login"
        android:layout_marginBottom="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="24sp"
        android:gravity="center_horizontal" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField_phno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/ic_phone_black_24dp"
        app:startIconContentDescription="Phone No."
        android:hint="@string/phone_number"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/textPhone"
            android:inputType="phone"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:visibility="gone"
            android:id="@+id/verifycode_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/verifycode"
                android:importantForAutofill="no"
                android:hint="@string/verification_code"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
                android:text="@string/submit"
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"/>

        <ProgressBar
            android:id="@+id/login_progress"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:layout_height="wrap_content"/>

</LinearLayout>