<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginVertical="20dp">

    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_margin="10dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/ic_user"
        android:contentDescription="@string/user_image" />
    </LinearLayout>


    <TextView
        android:id="@+id/text_username_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="25sp"
    />
    <TextView
        android:id="@+id/text_phno_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="?android:attr/textColorHint"
        android:textSize="17sp"
    />

    <TextView
        android:id="@+id/text_points_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:textAlignment="center"
        android:textColor="?android:attr/textColorSecondary"
        android:textSize="18sp"
        />

    <View
        android:id="@+id/divider_settings"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
    >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emergencyContactsButton"
            android:orientation="vertical"
            >

            <TextView
                android:text="@string/title_emergency_contacts"
                android:layout_width="match_parent"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="16sp"
                android:layout_height="wrap_content" android:id="@+id/title_emergencyContacts"/>

            <TextView
                android:text="@string/emergency_contacts_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/hint_emergencyContacts"/>

            <View
                android:id="@+id/divider_settings_1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="10dp"
                android:background="?android:attr/listDivider" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/settings_volunteerToggle">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <LinearLayout
                    android:id="@+id/volunteerTextSettings"
                    android:layout_width="0dp"
                    android:layout_gravity="start|center_vertical"
                    android:layout_weight="1"

                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:text="@string/title_volunteer_mode"
                        android:layout_width="wrap_content"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="16sp"
                        android:layout_height="wrap_content" android:id="@+id/title_volunteerMode_settings"/>

                    <TextView
                        android:text="@string/volunteer_mode_summary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/hint_volunteerMode_settings"/>

                </LinearLayout>

                <Switch
                    android:layout_gravity="center"
                    android:id="@+id/toggle_volunteerMode_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?android:attr/textColorPrimary"
                    />

            </LinearLayout>

            <View
                android:id="@+id/divider_settings_2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="10dp"
                android:background="?android:attr/listDivider" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/languageButtonSettings"
            android:orientation="vertical"
            >

            <TextView
                android:text="@string/language"
                android:layout_width="wrap_content"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="16sp"
                android:layout_marginVertical="10dp"
                android:layout_height="wrap_content"
                android:id="@+id/title_language_settings"/>

            <View
                android:id="@+id/divider_settings_3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="10dp"
                android:background="?android:attr/listDivider" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/logoutButtonSettings"
            android:orientation="vertical"
            >

            <TextView
                android:text="@string/logout"
                android:layout_width="wrap_content"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="16sp"
                android:layout_marginVertical="10dp"

                android:layout_height="wrap_content"
                android:id="@+id/title_logout_settings"/>

            <View
                android:id="@+id/divider_settings_4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="10dp"
                android:background="?android:attr/listDivider" />

        </LinearLayout>

    </LinearLayout>



</LinearLayout>